# allen-ivco

./: .gitignore  AGENTS.md  CLAUDE.md  docker-compose.yml
.specify/memory/: constitution.md
cli/ivco-calc/: pyproject.toml
cli/ivco-calc/src/ivco_calc/: cli.py  owner_earnings.py  tools_registry.py  verify.py
cli/ivco-calc/src/ivco_calc/fetchers/: __init__.py  base.py  fmp.py
cli/ivco-calc/tests/: test_analyze.py  test_fetch.py  test_oe.py  test_tools_registry.py  test_verify.py
cms/: .env.example  package.json  pnpm-lock.yaml  vitest.config.mts
cms/src/: payload-types.ts  payload.config.ts
cms/src/collections/: Authors.ts  Categories.ts  Companies.ts  CompanyEvents.ts  Posts.ts  Series.ts  Tags.ts
cms/src/lib/: structured-data.ts
cms/src/migrations/: 20260216_091944_initial.json  20260216_091944_initial.ts  20260216_105624_schema_overhaul.json  (+3 more)
config/agents/: consensus-chairman.md  macro-strategist.md  supply-chain-detective.md  the-skeptic.md
docs/: expert-manual-v2.md  supabase-action-guide.md
docs/blog/: 01-allen-framework-vs-buffett-oe.md  02-tsmc-case-study.md  03-why-we-built-ivco.md  04-what-are-owner-earnings.md  05-three-stage-dcf-philosophy-to-algorithm.md  06-confidence-coefficient-why-a-range.md  07-how-ivco-became-an-intelligence.md
docs/plans/: 2026-02-13-ivco-mvp-design.md  2026-02-15-ivco-phase-05-1-design.md  2026-02-15-ivco-phase-05a-implementation.md
scripts/: collect-x-intel.sh  ivco-collect  ivco-xsearch  process-tweets.py  seed-blog.ts  upload-blog.ts
supabase/migrations/: 001_core_tables.sql  002_add_jsonb_fields.sql
(+14 files in other folders)
